<resources>
    <string name="app_name">JustCalendar</string>
    <string name="Dashboard">Dashboard</string>
    <string name="nomutilisateur">nomutilisateur</string>
    <string name="Bienvenus">Bienvenue</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_ajout__calendrier">Ajout Calendrier</string>


    <string-array name="priorite">
        <item>faible</item>
        <item>moyenne</item>
        <item>élevée</item>
    </string-array>

    <string-array name="recurrence">

        <item>Quotidien</item>
        <item>Hebdomadaire</item>
        <item>Mensuel</item>
       <!-- <item>Bimestriel</item>
        <item>Trimestriel</item>
        <item>Semestriel</item>
        <item>Annuel</item>-->
    </string-array>

    <string-array name="delai_alerte">
        <item>pas dalerte</item>
        <item>0 m</item>
        <item>5 m</item>
        <item>10 m</item>
        <item>15 m</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fin">Fin :</string>
    <string name="lieu">Lieu :</string>
    <string name="description">Description :</string>
    <string name="recurrence">Recurrence :</string>
    <string name="debut">Debut :</string>
    <string name="action_today">Aujourd\'hui</string>
    <string name="action_day_view">Jour</string>
    <string name="action_three_day_view">3 Jours</string>
    <string name="action_week_view">Semaine</string>

    <string name="titre">  Titre</string>
    <string name="activite">  Activité</string>
    <string name="visibilite">  Visibilité</string>
    <string name="priorite">  Priorité</string>
    <string name="couleur">Couleur</string>
    <string name="libele">Libelé :</string>
    <string name="dans">Dans :</string>
    <string name="alerte">Alerte:</string>
    <string name="deleteTitleDialogCalendar">Suppression du calendrier</string>
    <string name="deleteMessageDialogCalendar">Voulez-vous supprimer le calendrier intitulé :</string>
    <string name="eventTransfer">Transférer les événements</string>

    <string name="addSuccess">Ajout avec succès</string>
    <string name="updateSuccess">Modification avec succès</string>
    <string name="addCalendarToast">Ajout d\'un calendrier</string>
    <string name="deleteTitleDialogEvent">Suppression de l\'événement</string>
    <string name="deleteMessageDialogEvent">Voulez-vous supprimer l\'événement intitulé : </string>
    <string name="home">Accueil</string>
    <string name="globalView">VUE GLOBALE</string>
    <string name="calendar">Calendrier</string>
    <string name="options">Paramètres</string>
    <string name="about">A Propos</string>
    <string name="titretransfert">deplacer les evenments de ce calendrier vers un autre</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="addcalendar">Ajoutez un calendrier </string>
    <string name="addevent">Ajoutez un événment </string>
    <string name="setcalendar">Modifiez un calendrier </string>
    <string name="setevent">Modifiez un événment </string>
    <string name="yourtitel">votre titre</string>
    <string name="yourdesccreption">votre description</string>
    <string name="titrerealisation">Cette application a été réalisé comme projet de fin ce cycle par :</string>

</resources>
